latest changes over open solar
